Remove support for scrolling, double tap and transform function

--- a/public/devcon-demo-app/html/photos.html
+++ b/public/devcon-demo-app/html/photos.html
@@ -20,13 +20,7 @@
     <script type="text/javascript" src="../javascripts/views/photos.js"></script>
 
     <!-- add in underscore microframework to support for nice iterations/function over arrays of objects -->
-    <script type="text/javascript" src="../javascripts/lib/underscore.js"></script>    
-    <!-- add in overthrow.js to enable scrolling of our thumbnail content area -->
-    <script type="text/javascript" src="../javascripts/lib/overthrow.js"></script>
-    <!-- hammer.js to support our double tap and drag guesture -->
-    <script type="text/javascript" src="../javascripts/lib/hammer.js"></script>
-    <script type="text/javascript" src="../javascripts/lib/jquery.hammer.js"></script>    
-
+    <script type="text/javascript" src="../javascripts/lib/underscore.js"></script>        
   </head>
   <body>
 
@@ -36,7 +30,7 @@
       </header>
       
       <!-- This is the main content area of the page.  It will hold all of the thumbnails and enable scrolling of content. -->
-      <section class="photocontainer overthrow">
+      <section class="photocontainer">
         <!-- The javascripts/views/photo.js file will trigger fetching images from flickr and populate into this ul. -->
         <ul class='photolist'>
         </ul>
